Updated project display to show 4 projects and removed unused images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<ul class="nav-link-section">
 		    	<li><a href="index.html" class="nav-link">Projects</a></li>
 		    	<li><a href="about.html" class="nav-link">About</a></li>
-		    	<li><a href="contact.html" class="nav-link">Contact</a></li>
+		    	<li><a href=" " class="nav-link">Resume</a></li>
 		  	</ul>
 		</nav>
 
@@ -48,7 +48,7 @@
 				<ul>
 			    	<li><a href="index.html#projects">Projects</a></li>
 			    	<li><a href="about.html">About</a></li>
-			    	<li><a href="contact.html">Contact</a></li>
+			    	<li><a href=" ">Resume</a></li>
 		  		</ul>
 			</div>
 		</header>
@@ -58,39 +58,77 @@
 			<h2 class="subheading">Projects</h2>
 			<hr>
 
-			<!-- Project Display One -->
-			<div class="project-display">
-				<!-- Project Image -->
-       			<div class="project-image">
-       				<img src="img/seeremproject.png" alt="SeeRem Project">
-       			</div>
-       			<!-- Project Description -->
-       			<div class="project-description-container">
-       				<div class="project-description right">
-       					<h3>SeeRem</h3>
-       					<p>Front-End Website</p>
-       					<!-- Project Page Link -->
-       					<a href="seerem.html">View&nbsp;More&nbsp;&rarr;</a>
-       				</div>
-       			</div>
-       		</div>
+			<div class="project-display-container">
+				<!-- Project Display One -->
+				<div class="project-display project-one">
+					<!-- Project Image -->
+					<div class="project-image">
+						<img src="img/seeremproject.png" alt="SeeRem Project">
+					</div>
+					<!-- Project Description -->
+					<div class="project-description-container">
+						<div class="project-description">
+							<h3>SeeRem</h3>
+							<p>Front-End Website</p>
+							<!-- Project Page Link -->
+							<a href="seerem.html">View&nbsp;More&nbsp;&rarr;</a>
+						</div>
+					</div>
+				</div>
 
-       		<!-- Project Display Two -->
-       		<div class="project-display">
-       			<!-- Project Image -->
-       			<div class="project-image right">
-       				<img src="img/shoeaddictionproject.png" alt="Shoe Addiction">
-       			</div>
-       			<!-- Project Description -->
-       			<div class="project-description-container left">
-       				<div class="project-description left">
-       					<h3>Shoe Addiction</h3>
-       					<p>Back-End Website</p>
-       					<!-- Project Page Link -->
-       					<a href="shoeaddiction.html">View&nbsp;More&nbsp;&rarr;</a>
-       				</div>
-       			</div>
-       		</div>
+				<!-- Project Display Two -->
+				<div class="project-display project-two">
+					<!-- Project Image -->
+					<div class="project-image">
+						<img src="img/shoeaddictionproject.png" alt="Shoe Addiction">
+					</div>
+					<!-- Project Description -->
+					<div class="project-description-container">
+						<div class="project-description">
+							<h3>Shoe Addiction</h3>
+							<p>Back-End Website</p>
+							<!-- Project Page Link -->
+							<a href="shoeaddiction.html">View&nbsp;More&nbsp;&rarr;</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="project-display-container">
+				<!-- Project Display One -->
+				<div class="project-display project-one">
+					<!-- Project Image -->
+					<div class="project-image">
+						<!-- <img src=" " alt=" "> -->
+					</div>
+					<!-- Project Description -->
+					<div class="project-description-container">
+						<div class="project-description">
+							<h3>Project 3</h3>
+							<p>Description</p>
+							<!-- Project Page Link -->
+							<a href=" ">View&nbsp;More&nbsp;&rarr;</a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Project Display Two -->
+				<div class="project-display project-two">
+					<!-- Project Image -->
+					<div class="project-image">
+						<!-- <img src=" " alt=" "> -->
+					</div>
+					<!-- Project Description -->
+					<div class="project-description-container">
+						<div class="project-description">
+							<h3>Project 4</h3>
+							<p>Description</p>
+							<!-- Project Page Link -->
+							<a href=" ">View&nbsp;More&nbsp;&rarr;</a>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<!-- Footer -->
@@ -101,9 +139,10 @@
 			</div>
 			<!-- Footer Links -->
 			<div class="footer-links">
-				<a href="styleguide.html" target="_blank">Style Guide</a>
+				<a href=" " target="_blank">Facebook</a>
+				<!-- <a href="styleguide.html" target="_blank">Style Guide</a>
 				<a href="https://github.com/cwkshum/IAT339_Portfolio" target="_blank">GitHub</a>
-				<a href="citations.html" target="_blank">Citations</a>
+				<a href="citations.html" target="_blank">Citations</a> -->
 			</div>
 		</footer>
 
