Updated header styling and project process layout

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 			<ul class="nav-link-section">
 		    	<li><a href="index.html" class="nav-link">Projects</a></li>
 		    	<li><a href="about.html" class="nav-link">About</a></li>
-		    	<li><a href="contact.html" class="nav-link">Contact</a></li>
+		    	<li><a href=" " class="nav-link">Resume</a></li>
 		  	</ul>
 		</nav>
 
@@ -45,7 +45,9 @@
 	    	<div class="page-description">
 		    	<h2>Hello, I'm Carissa!</h2>
 		    	<p>I am a Surrey based web developer and UX/UI designer that is currently studying Interactive Arts and Technology at Simon Fraser University. With a strong interest in web development and interface design, I hope to create a positive user experience through the work I produce by combining my love of coding and design. My goal is to utilize my skills in front-end and back-end web development as well as my design knowledge to create meaningful applications ranging from the web to mobile that can meet the needs of the intended users.</p>
-	    	</div>
+			
+				<p>If you are interested in working together, you can contact me at <a href="mailto:carissashum@gmail.com" target="_blank">carissashum@gmail.com</a>. Feel free to leave me a message and I will get back to you as soon as I can.</p>
+			</div>
 		</div>
 
 		<!-- Footer -->
@@ -56,9 +58,9 @@
 			</div>
 			<!-- Footer Links -->
 			<div class="footer-links">
-				<a href="styleguide.html" target="_blank">Style Guide</a>
+				<!-- <a href="styleguide.html" target="_blank">Style Guide</a>
 				<a href="https://github.com/cwkshum/IAT339_Portfolio" target="_blank">GitHub</a>
-				<a href="citations.html" target="_blank">Citations</a>
+				<a href="citations.html" target="_blank">Citations</a> -->
 			</div>
 		</footer>
   	</body>
