--- a/index.html
+++ b/index.html
@@ -35,8 +35,27 @@
 		  	</ul>
 		</nav>
 
+		<div class="curve-container">
+			<!-- <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" preserveAspectRatio="none" width="1440" height="560" viewBox="0 0 1440 560"> -->
+			<svg class ="curves" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" preserveAspectRatio="none" viewBox="0 0 1440 560">
+				<g mask="url(&quot;#SvgjsMask1011&quot;)" fill="none">
+					<path d="M1601.07 114.56C1438.18 116.67 1292.61 305.4 977.89 304.96 663.18 304.52 535.07-49.02 354.72-62.35" stroke="rgba(251, 250, 250, 0.6)" stroke-width="2"></path>
+					<path d="M1511 360.38C1390.24 349.27 1338.13 113.6 1103.56 97.18 868.98 80.76 810.17-103.59 696.11-109.38" stroke="rgba(251, 250, 250, 0.6)" stroke-width="2"></path>
+					<path d="M1505.49 461.99C1394.9 461.77 1287.11 391.99 1068.72 391.99 850.34 391.99 872.62 471.78 631.95 461.99 391.28 452.2 350.97 28.43 195.18-14.48" stroke="rgba(251, 250, 250, 0.6)" stroke-width="2"></path>
+					<path d="M1697.09 101.99C1520.54 102.98 1355.56 259.14 1008.51 258.79 661.47 258.44 510.8-64.21 319.94-72.69" stroke="rgba(251, 250, 250, 0.6)" stroke-width="2"></path>
+					<path d="M1648.64 335.23C1515.66 337.2 1409.01 502.04 1142.04 497.63 875.07 493.22 808.95 37.08 635.44-2.57" stroke="rgba(251, 250, 250, 0.6)" stroke-width="2"></path>
+				</g>
+				<defs>
+					<mask id="SvgjsMask1011">
+						<rect width="1440" height="560" fill="#ffffff"></rect>
+					</mask>
+				</defs>
+			</svg>
+		</div>
+
 		<!-- Header -->
 		<header class="main-header">
+
 			<!-- Header Text -->
 			<div class="header-content">
 				<h1>Carissa Shum</h1>
@@ -52,6 +71,16 @@
 		  		</ul>
 			</div>
 		</header>
+
+		<div class ="wave-container">
+			<svg id="visual" viewBox="0 0 900 200" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
+				<path d="M0 170L25 172C50 174 100 178 150 177.8C200 177.7 250 173.3 300 165.8C350 158.3 400 147.7 450 141.8C500 136 550 135 600 142.2C650 149.3 700 164.7 750 168C800 171.3 850 162.7 875 158.3L900 154L900 0L875 0C850 0 800 0 750 0C700 0 650 0 600 0C550 0 500 0 450 0C400 0 350 0 300 0C250 0 200 0 150 0C100 0 50 0 25 0L0 0Z" fill="#ffffff"></path>
+				<path d="M0 89L25 93.7C50 98.3 100 107.7 150 118.5C200 129.3 250 141.7 300 137.5C350 133.3 400 112.7 450 104C500 95.3 550 98.7 600 109C650 119.3 700 136.7 750 139.2C800 141.7 850 129.3 875 123.2L900 117L900 0L875 0C850 0 800 0 750 0C700 0 650 0 600 0C550 0 500 0 450 0C400 0 350 0 300 0C250 0 200 0 150 0C100 0 50 0 25 0L0 0Z" fill="#fbfafa"></path>
+				<path d="M0 90L25 84.7C50 79.3 100 68.7 150 63.7C200 58.7 250 59.3 300 70.5C350 81.7 400 103.3 450 105.3C500 107.3 550 89.7 600 85.7C650 81.7 700 91.3 750 89.2C800 87 850 73 875 66L900 59L900 0L875 0C850 0 800 0 750 0C700 0 650 0 600 0C550 0 500 0 450 0C400 0 350 0 300 0C250 0 200 0 150 0C100 0 50 0 25 0L0 0Z" fill="#f8f6f5"></path>
+				<path d="M0 86L25 84C50 82 100 78 150 74.3C200 70.7 250 67.3 300 65.3C350 63.3 400 62.7 450 66.2C500 69.7 550 77.3 600 79.5C650 81.7 700 78.3 750 73.5C800 68.7 850 62.3 875 59.2L900 56L900 0L875 0C850 0 800 0 750 0C700 0 650 0 600 0C550 0 500 0 450 0C400 0 350 0 300 0C250 0 200 0 150 0C100 0 50 0 25 0L0 0Z" fill="#f5f2f0"></path>
+				<path d="M0 56L25 53.2C50 50.3 100 44.7 150 42C200 39.3 250 39.7 300 38C350 36.3 400 32.7 450 33.5C500 34.3 550 39.7 600 43.7C650 47.7 700 50.3 750 49.5C800 48.7 850 44.3 875 42.2L900 40L900 0L875 0C850 0 800 0 750 0C700 0 650 0 600 0C550 0 500 0 450 0C400 0 350 0 300 0C250 0 200 0 150 0C100 0 50 0 25 0L0 0Z" fill="#f2edec"></path>
+			</svg>
+		</div>
 
 		<!-- Projects Section -->
 		<div id="projects" class="page-contents anchor">
@@ -71,7 +100,7 @@
 							<h3>SeeRem</h3>
 							<p>Front-End Website</p>
 							<!-- Project Page Link -->
-							<a href="seerem.html">View&nbsp;More&nbsp;&rarr;</a>
+							<a class="arrow" href="seerem.html">View&nbsp;More&nbsp;</a>
 						</div>
 					</div>
 				</div>
@@ -88,7 +117,7 @@
 							<h3>Shoe Addiction</h3>
 							<p>Back-End Website</p>
 							<!-- Project Page Link -->
-							<a href="shoeaddiction.html">View&nbsp;More&nbsp;&rarr;</a>
+							<a class="arrow" href="shoeaddiction.html">View&nbsp;More</a>
 						</div>
 					</div>
 				</div>
@@ -104,10 +133,10 @@
 					<!-- Project Description -->
 					<div class="project-description-container">
 						<div class="project-description">
-							<h3>Project 3</h3>
-							<p>Description</p>
+							<h3>VanCity Cycling</h3>
+							<p>Mobile Application</p>
 							<!-- Project Page Link -->
-							<a href=" ">View&nbsp;More&nbsp;&rarr;</a>
+							<a class="arrow" href=" ">View&nbsp;More&nbsp;</a>
 						</div>
 					</div>
 				</div>
@@ -121,10 +150,10 @@
 					<!-- Project Description -->
 					<div class="project-description-container">
 						<div class="project-description">
-							<h3>Project 4</h3>
-							<p>Description</p>
+							<h3>PSOD Grad Video</h3>
+							<p>Video</p>
 							<!-- Project Page Link -->
-							<a href=" ">View&nbsp;More&nbsp;&rarr;</a>
+							<a class="arrow" href=" ">View&nbsp;More&nbsp;</a>
 						</div>
 					</div>
 				</div>
