--- a/shoeaddiction.html
+++ b/shoeaddiction.html
@@ -48,7 +48,12 @@
 	    	<div class="page-description">
 	    		<h2>Overview</h2>
 	    		<hr>
-	    		<p>Shoe Addiction is a fictional shoe store web application project, focused on the back-end handling of user requests. The goal is to create a website that would be able to handle user input and utilize a database to store and retrieve data. The website was developed in a team of three to display products offered by the store through a database, allow visitors to browse content units, and handle member registration, log in as well as customization. The overall functionality of the website was developed to help gain a better understanding of the structure in present-day e-commerce sites.</p>
+	    		<p>Shoe Addiction is a fictional shoe store web application project, focused on the back-end handling of 
+					user requests. The goal is to create a website that would be able to handle user input and utilize a 
+					database to store and retrieve data. The website was developed in a team of three to display products 
+					offered by the store through a database, allow visitors to browse content units, and handle member 
+					registration, log in as well as customization. The overall functionality of the website was developed 
+					to help gain a better understanding of the structure in present-day e-commerce sites.</p>
 	    	</div>
 	    	<!-- Image -->
 	    	<div class="image-container">
@@ -70,11 +75,10 @@
 			<section class="tools-container">
 				<h3>Tools</h3>
 				<ul>
-					<li>HTML/CSS</li>
-					<li>JavaScript</li>  
+					<li>HTML / CSS / JavaScript</li>  
 					<li>PHP</li>
 					<li>MySQL</li> 
-					<li>AJAX</li>  
+					<!-- <li>AJAX</li>   -->
 					<li>Figma</li>
 				</ul>
 			</section>
@@ -86,76 +90,103 @@
 					<li>Chamira Perera</li>
 				</ul>
 			</section>
+			<!-- Duration -->
+			<section class="duration-container">
+				<h3>Duration</h3>
+				<ul>
+					<li>11 Weeks<br>(Sept-Dec 2020)</li>
+				</ul>
+			</section>
 		</div>
 
 		<!-- Divider -->
 		<hr class="divider">
 
 		<!-- Project Analysis Part One -->
-		<div class="container center-align">
-	    	<!-- Image -->
-	    	<div class="image-container left">
-		       	<img src="img/shoeaddictiondbdesign.png" alt="Shoe Addiction Database Design">
-	    	</div>
-	    	<!-- Description -->
-	    	<div class="page-description right">
+		<div class="container">
+			<div class="heading-container">
 	    		<h3>Database Design</h3>
-	    		<p>Starting with the database design, an ER Diagram was created to understand what information was needed to be stored on the site to handle the intended functionality. Four main entities with their respective attributes and relations were created; Members, Products, Cart and Customization. Once the diagram was finalized, the database was created.</p>
 	    	</div>
+			<!-- Description -->
+	    	<div class="process-description">
+	    		<p>Starting with the database design, an ER Diagram was created to understand what information was needed 
+					to be stored on the site to handle the intended functionality. Four main entities with their respective 
+					attributes and relations were created; Members, Products, Cart and Customization. Once the diagram was 
+					finalized, the database was created.</p>
+	    	
+				<!-- Image -->
+				<img src="img/shoeaddictiondbdesign.png" alt="Shoe Addiction Database Design">
+			</div>
 		</div>
 
 		<!-- Project Analysis Part Two -->
-		<div class="container center-align">
-	    	<!-- Description -->
-	    	<div class="page-description left">
+		<div class="container">
+			<div class="heading-container">
 	    		<h3>Front-End Development</h3>
-	    		<p>The next step of the project was front-end development, where I used HTML, CSS, and Javascript to create a basic structure for the website based on the wireframes that we designed. Images and content were then added and the branding was constructed to create a comprehensive user interface.</p>
-	    		<!-- Image -->
-	    		<img src="img/shoeaddictionwireframes.png" alt="Shoe Addiction Wireframes">
 	    	</div>
-	    	<!-- Image -->
-	    	<div class="image-container right">
-		       	<img src="img/shoeaddictionfrontend.png" alt="Shoe Addiction Content Display on Laptop">
+	    	<!-- Description -->
+	    	<div class="process-description">
+	    		<p>The next step of the project was front-end development, where I used HTML, CSS, and Javascript to create a 
+					basic structure for the website based on the wireframes that we designed. Images and content were then added 
+					and the branding was constructed to create a comprehensive user interface.</p>
+	    		<!-- Image -->
+				<img src="img/shoeaddictionwireframes.png" alt="Shoe Addiction Wireframes">
+				<img src="img/shoeaddictionfrontend.png" alt="Shoe Addiction Content Display on Laptop">
 	    	</div>
 		</div>
 
 		<!-- Project Analysis Part Three -->
-		<div class="container center-align">
-	    	<!-- Image -->
-	    	<div class="image-container left">
-		       	<img src="img/shoeaddictionbackend.png" alt="Shoe Addiction Back-End Implementation">
+		<div class="container">
+	    	<div class="heading-container">
+	    		<h3>Back-End Implementation</h3>
 	    	</div>
 	    	<!-- Description -->
-	    	<div class="page-description right">
-	    		<h3>Back-End Implementation</h3>
-	    		<p>Our focus then shifted to back-end development where I used PHP and MySQL to process user and database information. Users could browse the shoes that were retrieved from the database and were also able to use filters to refine the products that were shown. Additionally, by using AJAX, I was able to update the page content without having the page reload every time. This meant that the website had live filtering for a more seamless user shopping experience. Through the use of PHP form handling and SQL query statements, visitors also had the ability to sign up for an account or login using a pre-existing account. Further functionality that I made available was the ability for members to add items to their favourites list and cart. With the different abilities that visitors and members have on the site, PHP sessions were implemented to check if a user is logged in.</p>
-	    	</div>
+	    	<div class="process-description">
+	    		<p>Our focus then shifted to back-end development where I used PHP and MySQL to process user and database 
+					information. Users could browse the shoes that were retrieved from the database and were also able to use 
+					filters to refine the products that were shown. Additionally, by using AJAX, I was able to update the page 
+					content without having the page reload every time. This meant that the website had live filtering for a more 
+					seamless user shopping experience. Through the use of PHP form handling and SQL query statements, visitors 
+					also had the ability to sign up for an account or login using a pre-existing account. Further functionality 
+					that I made available was the ability for members to add items to their favourites list and cart. With the 
+					different abilities that visitors and members have on the site, PHP sessions were implemented to check if a 
+					user is logged in.</p>
+				<!-- Image -->
+				<img src="img/shoeaddictionbackend.png" alt="Shoe Addiction Back-End Implementation">
+			</div>
 		</div>
 
 		<!-- Project Analysis Part Four -->
-		<div class="container center-align">
-	    	<!-- Description -->
-	    	<div class="page-description left">
+		<div class="container">
+	    	<div class="heading-container">
 	    		<h3>Challenges of New Languages</h3>
-	    		<p>Since this was the first time I worked with PHP and MySQL to develop a website focused primarily on back-end development, it was challenging to get the functionality of the site working at each phase. It took a lot of time to debug certain issues in our code. By dedicating more time to learning and understanding each topic, I was able to debug issues that arose and got the final website working with the intended functionality. </p>
 	    	</div>
-	    	<!-- Image -->
-	    	<div class="image-container right">
-		       	<img src="img/shoeaddictionchallenges.png" alt="Shoe Addiction Account Page">
-	    	</div>
+	    	<!-- Description -->
+	    	<div class="process-description">
+	    		<p>Since this was the first time I worked with PHP and MySQL to develop a website focused primarily on back-end 
+					development, it was challenging to get the functionality of the site working at each phase. It took a lot of 
+					time to debug certain issues in our code. By dedicating more time to learning and understanding each topic, 
+					I was able to debug issues that arose and got the final website working with the intended functionality. </p>
+				<!-- Image -->
+				<img src="img/shoeaddictionchallenges.png" alt="Shoe Addiction Account Page">
+			</div>
 		</div>
 
 		<!-- Project Analysis Part Five -->
-		<div class="container column">
-	    	<!-- Project Conclusion -->
-	    	<div class="page-description">
+		<div class="container">
+	    	<div class="heading-container">
 	    		<h3>Conclusion</h3>
-	    		<p>Overall, the website development took three months to complete. As it was outside of the project scope, for future iterations I would like to explore the possibility of implementing responsiveness for the website as well as implementing the purchase process to complete the entire shopping experience. The final outcome was a fully developed website that had both front-end and back-end implemented that successfully used a database to handle the website’s information.</p>
 	    	</div>
-	    	<!-- Image -->
-	    	<div class="image-container right">
-		       	<img src="img/shoeaddictionconclusion.png" alt="Shoe Addiction Website Pages">
-	    	</div>
+	    	<!-- Project Conclusion -->
+	    	<div class="process-description">
+	    		<p>Overall, the website development took three months to complete. As it was outside of the project scope, for 
+					future iterations I would like to explore the possibility of implementing responsiveness for the website as 
+					well as implementing the purchase process to complete the entire shopping experience. The final outcome was 
+					a fully developed website that had both front-end and back-end implemented that successfully used a database 
+					to handle the website’s information.</p>
+				<!-- Image -->
+				<img src="img/shoeaddictionconclusion.png" alt="Shoe Addiction Website Pages">
+			</div>
 		</div>
 
 		<!-- Next Project Button -->
